tests/error/type_errors/binary_not_arith_left.err
Error: Operator not defined (at $FILE:6:11)
  | 
4 | @compile_guppy
5 | def foo(x: int) -> int:
6 |     return (1, 1) * 4
  |            ^^^^^^^^^^ Binary operator `*` not defined for `(int, int)` and `int`

Guppy compilation failed due to 1 previous error
